crates/mssql-client/tests/compile-fail/tvp_tuple_struct.stderr
error: Tvp can only be derived for structs with named fields
 --> tests/compile-fail/tvp_tuple_struct.rs:3:1
  |
3 | / /// Tvp requires named fields, not tuple structs.
4 | | #[derive(Tvp)]
5 | | #[mssql(type_name = "dbo.SomeType")]
6 | | struct TupleStruct(i32, String);
  | |________________________________^
